landing fix content

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,7 @@ jobs:
         run: npm run build
         env:
           NODE_ENV: production
+          VITE_BASE_URL: /landing-ai-agent/
       
       - name: Setup Pages
         uses: actions/configure-pages@v4
