--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,12 +1,22 @@
-name: Deploy Vite App to GitHub Pages
+name: Deploy to GitHub Pages
 
 on:
   push:
     branches:
       - develop  # or your branch of choice
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: write
+  pages: write
+  id-token: write
+
+# Allow only one concurrent deployment
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
 
 jobs:
   build-and-deploy:
@@ -19,19 +29,30 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18'  # Use a stable LTS version
+          node-version: '18'
+          cache: 'npm'  # Enables caching of npm dependencies
 
       - name: Install dependencies
-        run: npm ci  # Using ci for cleaner, more reliable builds
-
-      - name: Build the Vite app
+        run: npm ci
+        
+      - name: Check for build errors
+        run: npm run lint --if-present
+        
+      - name: Build the app
         run: npm run build
         env:
           CI: true
+          # Add any environment variables needed for build
+          # VITE_API_URL: ${{ secrets.VITE_API_URL }}
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
+        if: success()
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist  # Vite builds to the dist directory by default
+          publish_dir: ./dist
           commit_message: 'Deploy to GitHub Pages'
+          # Enable if you want to keep deployment history
+          keep_files: false
+          # Enable if you want to add a custom domain
+          # cname: your-custom-domain.com
