Update workflow to use npm ci instead of bahmutov/npm-install

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        uses: bahmutov/npm-install@v2
+        run: npm ci
 
       - name: Build project
         run: npm run build
